@@ -13,7 +13,8 @@ This software uses or is based on the following libraries:
   Apache Commons ( www.apache.org )
   Apache Batik ( www.apache.org )  
   JGraph ( www.jgraph.com )  
-  JGoodies ( www.jgoodies.com )  
+  JGoodies ( www.jgoodies.com )
+  JasperReports ( http://jasperforge.org )  
   JUNG ( jung.sourceforge.net )    
   SQuirreL ( squirrel-sql.sourceforge.net )    
   Eclipse ZEST ( www.eclise.org )  
